<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apex AFD</string>
    <string name="hello_world">Hello world!</string>
    <string name="inetadd">0.0.0.0:50000</string>
    <string name="button_delete">Deletion</string>
    <string name="button_toast">Receive toasts</string>
    <string name="button_upload">Uploads</string>
    <string name="button_download">Downloads</string>
    <string name="button_rename">Renaming</string>
    <string name="allow">Allow:</string>
    <string name="button_deauth">Deauth users</string>
    <string name="notification_service_name">NotificationService</string>


</resources>
