<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:scrollbars="vertical"
    android:background="#3bbdff"
    android:id="@+id/mainbg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:keepScreenOn="true"
        android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"

        android:weightSum="1">

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:layout_weight="11.64">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:background="@color/hint_foreground_material_dark"
        android:gravity="center"
        >

        <TextView android:text="@string/inetadd" android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/ip"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:textIsSelectable="false" />

    </LinearLayout>

     <Button
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
         android:onClick="enableUsb"
         android:background="@drawable/ucable"
         android:layout_gravity="center_horizontal" />


     <Button
         android:id="@+id/onwifi"
         android:layout_marginTop="50dp"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/offwifi"
         />

 </LinearLayout>
        <TextView android:id="@+id/Allow"
            android:checked="true"
            android:layout_below="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:visibility="gone"
            android:textSize="35dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <CheckBox android:id="@+id/checkbox_download"
            android:checked="true"
            android:layout_below="@+id/Allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_download"
            android:textSize="35dp"/>
        <CheckBox android:id="@+id/checkbox_upload"
            android:checked="false"
            android:layout_below="@+id/checkbox_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_upload"
            android:textSize="35dp"/>
        <CheckBox android:id="@+id/checkbox_rename"
            android:layout_below="@+id/checkbox_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rename"
            android:checked="false"
            android:textSize="35dp"/>
        <CheckBox android:id="@+id/checkbox_deletion"
            android:layout_below="@+id/checkbox_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:checked="false"
            android:textSize="35dp"
            />
        <CheckBox android:id="@+id/checkbox_toasts"

            android:layout_below="@+id/checkbox_deletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_toast"
            android:textSize="35dp"/>
        <Button android:id="@+id/deauth"
            android:layout_below="@id/checkbox_toasts"
            android:text="@string/button_deauth"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deauth"

            />
    </LinearLayout>


    </LinearLayout>
</ScrollView>